swagger usercontroller
